Adicionei página de request shows e já funca!